--- a/Css/character.css
+++ b/Css/character.css
@@ -73,6 +73,84 @@ main {
     vertical-align: bottom;
 }
 
+.character-card {
+  max-width: 1200px;
+  margin: 40px auto;
+  bottom: 50px;
+  background-color: #fcd424;
+  border-radius: 20px;
+  padding: 40px 60px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+  position: relative;
+}
+
+.character-img {
+  height: auto;
+  max-height: 300px;
+  object-fit: contain;
+}
+
+.character-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.character-meta {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 20px;
+  margin-bottom: 25px;
+}
+
+.character-name {
+  font-size: 20px;
+  color: #000;
+  font-weight: 600;
+  flex: 1;
+}
+
+.character-gender {
+  font-size: 18px;
+  color: #333;
+  flex: 1;
+}
+
+.character-status {
+  font-size: 18px;
+  color: #333;
+  flex: 1;
+}
+
+.character-occupation {
+  font-size: 18px;
+  color: #333;
+  flex: 1;
+}
+
+.character-history {
+  font-size: 19px;
+  text-align: justify;
+  line-height: 1.6;
+  color: #000;
+}
+
+.close-button {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background-color: rgb(97, 211, 243);;
+  border: none;
+  border-radius: 8px;
+  font-size: 24px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
 #loading {
   position: fixed;
   top: 50%;
