--- a/Css/index.css
+++ b/Css/index.css
@@ -72,8 +72,8 @@ html, body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
-  gap: 40px;
-  margin: 65px;
+  gap: 20px;
+  margin: 20px;
 }
 
 .character-card {
@@ -98,6 +98,7 @@ html, body {
 .character-img {
   max-height: 200px;
   object-fit: contain;
+  height: 400px;
 }
 
 .character-name {
@@ -207,4 +208,60 @@ html, body {
   justify-content: center;
   position: relative;
   bottom: 65px;
+}
+
+.filter-container {
+  position: relative;
+  display: inline-block;
+}
+
+#filter-toggle {
+  display: block;
+  margin: 40px 0px 0px 1320px;
+  background-color: rgb(97, 211, 243);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.filter-options {
+  position: absolute;
+  margin-top: 10px;
+  left: 1215px;
+  background-color: #fcd424;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 15px;
+  z-index: 10;
+  min-width: 200px;
+}
+
+.hidden {
+  display: none;
+}
+
+.filter-options label {
+  display: block;
+  margin-top: 10px;
+}
+
+.filter-options select,
+.filter-options input {
+  width: 100%;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+#applyFilters {
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: rgb(97, 211, 243);
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
 }
