--- a/Css/character.css
+++ b/Css/character.css
@@ -27,14 +27,12 @@ main {
     align-items: center;
     position: fixed;
     z-index: 1;
-    
 }
 
 .header img {
     width: 83px;
     height: 62px;
     margin: 23px;
-    
 }
 
 .nav {
@@ -77,7 +75,7 @@ main {
   max-width: 1200px;
   margin: 40px auto;
   bottom: 50px;
-  background-color: #fcd424;
+  background-color: white;
   border-radius: 20px;
   padding: 40px 60px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
@@ -156,7 +154,7 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fcd424;
+  background-color: white;
   color: rgb(97, 211, 243);
   font-size: 36px;
   font-weight: bold;
