--- a/Css/index.css
+++ b/Css/index.css
@@ -22,15 +22,13 @@ html, body {
     gap: 450px;
     align-items: center;
     position: fixed;
-    z-index: 1;
-    
+    z-index: 1;   
 }
 
 .header img {
     width: 83px;
     height: 62px;
     margin: 23px;
-    
 }
 
 .nav {
@@ -77,7 +75,7 @@ html, body {
 }
 
 .character-card {
-  background: #FFCC00;
+  background: white;
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.4);
   width: 200px;
