--- a/Css/character.css
+++ b/Css/character.css
@@ -30,9 +30,9 @@ main {
 }
 
 .header img {
-    width: 83px;
-    height: 62px;
-    margin: 23px;
+    width: 72%;
+    height: 68px;
+    margin: 50px 19px 0px;
 }
 
 .nav {
