--- a/Css/docs.css
+++ b/Css/docs.css
@@ -62,3 +62,14 @@ pre code {
   background: none;
   padding: 0;
 }
+
+.header {
+    background-color: rgb(97, 211, 243);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    gap: 330px;
+    align-items: center;
+    position: fixed;
+    z-index: 1;   
+}
