--- a/Css/index.css
+++ b/Css/index.css
@@ -19,16 +19,16 @@ html, body {
     width: 100%;
     height: 60px;
     display: flex;
-    gap: 450px;
+    gap: 245px;
     align-items: center;
     position: fixed;
     z-index: 1;   
 }
 
 .header img {
-    width: 83px;
-    height: 62px;
-    margin: 23px;
+    width: 72%;
+    height: 68px;
+    margin: 50px 19px 0px;
 }
 
 .nav {
@@ -40,8 +40,8 @@ html, body {
 .nav a {
     text-decoration: none;
     color: black;
-    right: 40px;
     font-size: 20px;
+    position: relative;
 }
 
 .hero {
@@ -55,7 +55,7 @@ html, body {
 .hero img {
     width: 100%;
     height: 120px;
-    margin: 95px 0px 26px 0px;
+    margin: 145px 0px 26px 0px;
     position: relative;
 }
 
@@ -100,15 +100,23 @@ html, body {
 }
 
 .character-name {
-  color: #005BAC;
   font-weight: bold;
   font-size: 1.2rem;
+  color: #014079;
+  font-weight: bold;
+  font-size: 1rem;
+  display: -webkit-box;
+  line-clamp: 2; 
+  -webkit-line-clamp: 2; 
+  -webkit-box-orient: vertical; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
 }
 
 .character-gender,
 .character-status {
-  color: #005BAC; 
-  font-size: 1rem;
+    color: #3b678f; 
+  font-size: .9rem;
 }
 
 .pagination {
@@ -121,7 +129,7 @@ html, body {
 }
 
 .pagination button {
-  background: #FFCC00;
+  background: #fff;
   border: none;
   padding: 8px 12px;
   border-radius: 5px;
@@ -140,6 +148,11 @@ html, body {
   color: white;
 }
 
+#pagination-top {
+  position: relative;
+  bottom: 35px;
+}
+
 .buscar {
     position: fixed;
     margin: 18px;
@@ -148,8 +161,8 @@ html, body {
 
 .buscar input {
     border-radius: 25px;
-    margin: 1px;
     padding: 7px 16px;
+    margin: 1px;
     border-color: white;
     box-shadow: none;
     border: 1px solid #ccc;
@@ -206,6 +219,7 @@ html, body {
   justify-content: center;
   position: relative;
   bottom: 65px;
+  font-size: 25px;
 }
 
 .filter-container {
@@ -228,7 +242,7 @@ html, body {
   position: absolute;
   margin-top: 10px;
   left: 1215px;
-  background-color: #fcd424;
+  background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 15px;
@@ -252,6 +266,7 @@ html, body {
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  border-color: #fcd424;
 }
 
 #applyFilters {
@@ -263,3 +278,21 @@ html, body {
   font-size: 14px;
   cursor: pointer;
 }
+
+#loading {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  color: rgb(97, 211, 243);
+  font-size: 26px;
+  font-weight: bold;
+  padding: 30px 50px;
+  border: 4px solid rgb(97, 211, 243);
+  border-radius: 20px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  z-index: 9999;
+  display: none;
+  text-align: center;
+}
+
