--- a/Css/story.css
+++ b/Css/story.css
@@ -32,3 +32,14 @@
   font-size: 16px;
   line-height: 1.8;
 }
+
+.header {
+    background-color: rgb(97, 211, 243);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    gap: 330px;
+    align-items: center;
+    position: fixed;
+    z-index: 1;   
+}
