--- a/Css/story.css
+++ b/Css/story.css
@@ -43,3 +43,215 @@
     position: fixed;
     z-index: 1;   
 }
+
+@media (max-width: 667px) {
+  .nav a {
+    font-size: 15px;
+    position: relative;
+    width: 80px;
+    display: flex;
+    gap: 4px;
+    right: 420px;  
+  }
+
+  .header img {
+    width: 200%;
+    height: 72px;
+    margin: 50px 19px 0px 14px;
+  }
+
+  .nav {
+    display: flex;
+    gap: 16px;
+    position: relative;
+    left: 171px;
+  }
+}
+
+/* <= 896px */
+@media (max-width: 896px) and (min-width: 668px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+
+  .nav {
+    display: flex;
+    gap: 50px;
+  }
+
+  .character-card {
+    width: 170px;
+    height: 320px;
+  }
+}
+
+/* <= 844px */
+@media (max-width: 844px) and (min-width: 668px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 932px */
+@media (max-width: 932px) and (min-width: 845px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 915px */
+@media (max-width: 915px) and (min-width: 845px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 740px */
+@media (max-width: 740px) and (min-width: 668px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 1024px */
+@media (max-width: 1024px) and (min-width: 933px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+
+  .nav {
+    display: flex;
+    gap: 80px;
+  }
+}
+
+/* <= 1180px */
+@media (max-width: 1180px) and (min-width: 1025px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 1366px */
+@media (max-width: 1366px) and (min-width: 1181px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 1368px */
+@media (max-width: 1368px) and (min-width: 1367px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 720px */
+@media (max-width: 720px) and (min-width: 668px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+
+  .nav {
+    display: flex;
+    gap: 10px;
+  }
+}
+
+/* <= 882px */
+@media (max-width: 882px) and (min-width: 845px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 1280px */
+@media (max-width: 1280px) and (min-width: 1181px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+/* <= 914px */
+@media (max-width: 914px) and (min-width: 845px) {
+  #characters-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 20px;
+    margin: 20px;
+  }
+}
+
+@media(max-width:1366px) {
+  .filter-container {
+    position: relative;
+    right: 453px;
+  }
+
+  .nav a {
+    position: relative;
+    right: 160px;
+  }
+
+  #filter-toggle {
+    display: block;
+    margin: 40px 0px 0px 0px;
+    position: relative;
+    left: 1321px;
+    background-color: rgb(97, 211, 243);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+}
